# HeromatcH

./: .dockerignore  .gitignore  Dockerfile  LICENSE  config-example.py  config.py  docker-compose.yml  main.py  pyproject.toml  sonar-project.properties  tasks.py
.github/workflows/: build.yml  python-app.yml  python-package.yml
Heroes/: Ichiro.json  Kid.json  Luffy.json  Naruto.json
install/: config-docker.py
src/: matchup.py  test_matchup.py
src/api/: Restricted.py  button.py
src/bdd/: Hero_BDD.py  Joueur_BDD.py  Personnage_BDD.py  Vote_BDD.py  api_bdd.py
src/plugins/admin_user/: admin_user.py
src/plugins/classement/: classement.py
src/plugins/match/: match.py  match_tool.py  test_match_tool.py
src/plugins/start/: start.py
